--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/a4ef5c51d8.js" crossorigin="anonymous"></script>
     
   </body>
 </html>
